; ModuleID = '/home/carl/AnghaBench/vlc/bin/extr_override.c_putenv.c'
source_filename = "/home/carl/AnghaBench/vlc/bin/extr_override.c_putenv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@override = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [8 x i8] c"Blocked\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"\22%s\22\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @putenv(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i64, i64* @override, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @LOG(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* %7)
  store i32 0, i32* %2, align 4
  br label %12

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @CALL(i32 (i8*)* @putenv, i8* %10)
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %9, %6
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @LOG(i8*, i8*, i8*) #1

declare dso_local i32 @CALL(i32 (i8*)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
